<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_sing_up"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center_vertical"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context="com.lacf.luisadrian.vendexpress.Singup">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:text="@string/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:id="@+id/lbl_email" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/login_email_hint"
            android:id="@+id/txt_email" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:text="@string/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:id="@+id/lbl_password" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/login_password_hint"
            android:id="@+id/txt_password" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:text="@string/sign_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:id="@+id/lbl_firstname" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:ems="10"
            android:hint="@string/sign_firstname_hint"
            android:id="@+id/txt_firstname" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:text="@string/sign_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:id="@+id/lbl_lastname" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:ems="10"
            android:hint="@string/sign_lastname_hint"
            android:id="@+id/txt_lastname" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:text="@string/sign_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:id="@+id/lbl_phone" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:hint="@string/sign_phone_hint"
            android:id="@+id/txt_phone" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:text="@string/sign_sign"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorAccentText"
            android:layout_width="match_parent"
            android:textSize="16dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_signup" />
    </LinearLayout>
</ScrollView>
</LinearLayout>