<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cliente_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lacf.luisadrian.vendexpress.ClienteAdd">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:orientation="vertical" >

            <TextView
                android:text="@string/clienteadd_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:id="@+id/lbl_cliente_add_name" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:ems="10"
                android:hint="@string/clienteadd_name_hint"
                android:id="@+id/txt_cliente_add_name" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:text="@string/clienteadd_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:id="@+id/lbl_cliente_add_email" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:hint="@string/clienteadd_email_hint"
                android:id="@+id/txt_cliente_add_email" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:text="@string/clienteadd_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:id="@+id/lbl_cliente_add_address" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:ems="10"
                android:hint="@string/clienteadd_address_hint"
                android:id="@+id/txt_cliente_add_address" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:text="@string/clienteadd_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:id="@+id/lbl_phone" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:hint="@string/clienteadd_phone_hint"
                android:id="@+id/txt_cliente_add_phone" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <Button
                android:text="@string/clienteadd_add"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/colorAccentText"
                android:layout_width="match_parent"
                android:textSize="16dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_cliente_add_add" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
