<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyo_content"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lacf.luisadrian.vendexpress.Login">

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_marginLeft="20dp"
            android:layout_width="87dp"
            android:layout_height="80dp"
            app:srcCompat="@drawable/logo_big"
            android:src="@drawable/logo_big"
            android:id="@+id/img_title" />

        <TextView
            android:layout_width="wrap_content"
            android:textSize="36sp"
            android:textColor="@color/colorAccent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <TextView
        android:text="@string/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:id="@+id/lbl_email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/login_email_hint"
        android:id="@+id/txt_email" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:text="@string/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:id="@+id/lbl_password" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/login_password_hint"
        android:id="@+id/txt_password" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <Button
        android:text="@string/login_login"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorAccentText"
        android:layout_width="match_parent"
        android:textSize="16dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:text="@string/login_singup"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lbl_signup" />
</LinearLayout>