<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <android.support.v7.widget.CardView
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_view_clientes">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lbl_show_cliente_id"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/templatecliente_name"
                    android:layout_width="120dp"
                    android:textColor="@color/colorAccent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lbl_template_name" />

                <TextView
                    android:text="@string/clienteadd_name_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lbl_show_cliente_name" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp">

                <TextView
                    android:text="@string/templatecliente_email"
                    android:layout_width="120dp"
                    android:textColor="@color/colorAccent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lbl_template_email" />

                <TextView
                    android:text="@string/clienteadd_email_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lbl_show_cliente_email" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp">

                <TextView
                    android:text="@string/templatecliente_phone"
                    android:layout_width="120dp"
                    android:textColor="@color/colorAccent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lbl_template_phone" />

                <TextView
                    android:text="@string/clienteadd_phone_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lbl_show_cliente_phone" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp">

                <TextView
                    android:text="@string/templatecliente_address"
                    android:layout_width="120dp"
                    android:textColor="@color/colorAccent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lbl_template_address" />

                <TextView
                    android:text="@string/clienteadd_address_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lbl_show_cliente_address" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>