<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_view_productos">

        <LinearLayout
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_show_producto_photo"
                android:layout_width="120dp"
                android:layout_height="120dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="8dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lbl_show_producto_id"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/lbl_show_producto_name"
                    android:text="@string/producto_show_name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="$ "
                        android:textSize="30sp"
                        android:textColor="@color/colorAccent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/lbl_show_producto_price"
                        android:text="@string/producto_show_price"
                        android:textColor="@color/colorAccent"
                        android:textSize="30sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/lbl_show_producto_description"
                    android:text="@string/producto_show_description"
                    android:textSize="14sp"
                    android:lines="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>