<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_producto_edit"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lacf.luisadrian.vendexpress.ProductoEdit">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lbl_edit_producto_id"
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/img_edit_producto_photo"
                android:layout_width="match_parent"
                android:layout_height="220dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/lbl_edit_producto_name"
                android:gravity="right"
                android:text="@string/producto_show_name"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="$ "
                    android:textColor="@color/colorAccent"
                    android:textSize="32dp"
                    android:gravity="right"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/lbl_edit_producto_price"
                    android:text="@string/producto_show_price"
                    android:textColor="@color/colorAccent"
                    android:gravity="right"
                    android:textSize="32dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="Cantidad"
                    android:gravity="right"
                    android:textSize="18sp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/txt_productos_shopp_quantity"
                    android:text="1"
                    android:gravity="right"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <Button
                android:id="@+id/btn_productos_shopp_add"
                android:backgroundTint="@color/colorAccent"
                android:text="Agregar al carrito"
                android:textColor="@color/colorAccentText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/lbl_edit_producto_description"
                android:text="@string/producto_show_description"
                android:textSize="16sp"
                android:lines="5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
